[project]
name = "modpacker"
version = "0.1.0"
description = "The best Minecraft modpack creation tool you know"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click",
    "requests",
    "tqdm",
    "tomli-w",
    "questionary>=2.1.1",
    "brotli>=1.2.0",
]

[project.urls]
source = "https://github.com/Kinsteen/packer"

[project.scripts]
packer = "modpacker.modpacker:main"

[tool.black]
target-version = ['py311']
line-length = 150

[tool.ruff]

[tool.uv]
dev-dependencies = ["black", "ruff", "isort"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
